Revision history for MooseX-Workers

0.11_01  2010-02-24 pmooney, dec, jhannah
   - pmooney added get_worker_ids, the ability to trap SIG TERM, demo
   - dec wrote a generic signal handler instead of TERM-only.
   - jhannah wrote t/20.worker.SIG.TERM.t, showing sig_TERM() in action.

0.11  2010-02-18 arcanez
   - 0.10_01 is testing well. Pushing as 0.11.

0.10_01  2010-02-18 arcanez
   - Oops. We left MooseX::AttributeHelpers in t/02.wheel.t, making some testers fail.
     Submitting this correction to the smoking section to see if we missed anything else.
        (MX::Workers + MXAH 0.22+ worked fine (02.wheel.t), 
         but Moose 0.90+ and MXAH < 0.22 do not.
         And since MX::Workers 0.10 requires Moose 0.90 and doesn't
         specify any MXAH.. issues occurred.)

0.10  2010-02-17 arcanez
   - get rid of MXAH in favor of Native::Trait, also remove auto_deref in favor 
     of Native::Trait handles

0.09  2009-07-22 jhannah
   - confound and Sartak tell me that 'weaken' is wrong. Changed to 'weak_ref'.
   - doy suggests abandoning testing how long things take. Instead, design less 
     fragile tests for things happening or not. 
   - Fixed and cleaned up sig_child, added a test. Got rid of all those annoying 
     POE warnings about unhandled reap events. 
   - Misc. POD cleanup.

0.08  2009-07-14 jhannah
   - MooseX::Workers::Job 'args' attribute can now actually be used.

0.07  2009-06-16 jhannah
   - No one screamed at the dev release, so pushing as a normal release.

0.06_99  2009-06-10 jhannah
   - Added enqueue()
   - Added MooseX::Workers::Job
   - Added timeout attribute, worker_timeout callback
   - POD cleanup

0.05  2009-04-27
   - Fixed deprecation warnings with modern Moose. 
   - Updated dependency version numbers
   - Cleaned up extraneous use stricts
   - Deprecate check_worker_threashold cause it's a typo

0.04  Dec 31 2008
   - Added put_worker to send input to a worker
   - Added kill_worker to terminate a wheel